Update and rename mightcookaidevsteal.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><base href="/">
 <meta charset="UTF-8">
-<title>Mysterious Loading</title>
+<title>Awakened</title>
 <style>
   body {
     margin: 0;
